--- a/ruoyi-api/src/main/resources/application.yml
+++ b/ruoyi-api/src/main/resources/application.yml
@@ -109,7 +109,7 @@ web3j:
   url: https://mainnet.infura.io/v3/b631721031a64cfc8a94b911a6640939
 mifeng:
   api:
-    eth: L30PNXBLM9B6PJDSGTIE7MWWFIR3P6YL2ZU7INHB
+    eth: 0a67cc1e7f97f901700c76d95b4a74b3-c-app
     host: data.block.cc
 #tg
 telegram:
